--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
 
 subprojects {
     repositories {
+        maven {
+            url 'http://ci.arch.iconloop.com/nexus/repository/maven-public/'
+        }
         mavenCentral()
         maven {
             url 'https://oss.jfrog.org/artifactory/oss-snapshot-local'
