--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
     repositories {
+        maven {
+            url 'http://ci.arch.iconloop.com/nexus/repository/maven-public/'
+        }
         mavenCentral()
         maven {
             url 'https://oss.jfrog.org/artifactory/oss-snapshot-local'
@@ -20,7 +23,9 @@ compileJava {
 }
 
 dependencies {
-    implementation 'foundation.icon:javaee-api:0.8.7'
+    compileOnly 'foundation.icon:javaee-api:0.8.7'
+    implementation 'com.github.sink772:javaee-scorex:0.5.1'
+    implementation 'com.github.sink772:minimal-json:0.9.6'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
