Implement ScoreDataObjectProcesssor and EnumerableDictDB for example
- ScoreDataObjectProcesssor generates methods for score.ObjectWriter and score.ObjectReader
- EnumerableDictDB provides 'Map<K,V> toMap()'

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 optimizedJar {
     mainClassName = 'com.iconloop.score.example.HelloWorld'
     archivesBaseName = 'hello-world'
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 deployJar {
