--- a/annotation_processor/build.gradle
+++ b/annotation_processor/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation 'com.squareup:javapoet:1.12.1'
     implementation 'com.github.sink772:javaee-scorex:0.5.1'
     implementation 'com.github.sink772:minimal-json:0.9.6'
+    implementation project(':score-lib')
 }
 
 apply plugin: 'maven-publish'
