--- a/annotation_processor/build.gradle
+++ b/annotation_processor/build.gradle
@@ -1,41 +1,10 @@
 apply plugin: 'java-library'
 
 dependencies {
-    implementation 'foundation.icon:javaee-api:0.8.7'
+//    implementation 'foundation.icon:javaee-api:0.8.7'
+    implementation 'foundation.icon:javaee-api:0.8.8-SNAPSHOT'
     implementation 'com.squareup:javapoet:1.12.1'
-    implementation 'com.github.sink772:javaee-scorex:0.5.1'
+    implementation 'com.github.sink772:javaee-scorex:0.5.2'
     implementation 'com.github.sink772:minimal-json:0.9.6'
     implementation project(':score-lib')
-}
-
-apply plugin: 'maven-publish'
-
-def snapshotSuffix = rootProject.hasProperty('release') ? '' : '-SNAPSHOT'
-group = 'com.iconloop.score'
-version = '0.1.0' + snapshotSuffix
-
-java {
-    withSourcesJar()
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-            afterEvaluate {
-                artifactId = 'javaee-annotation-processor'
-            }
-        }
-    }
-    repositories {
-        maven {
-            def releasesUrl = "http://ci.arch.iconloop.com/nexus/repository/maven-releases"
-            def snapshotsUrl = "http://ci.arch.iconloop.com/nexus/repository/maven-snapshots"
-            url = version.endsWith('SNAPSHOT') ? snapshotsUrl : releasesUrl
-            credentials {
-                username = "$nexusUsername"
-                password = "$nexusPassword"
-            }
-        }
-    }
 }
