--- a/example/build.gradle
+++ b/example/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
+    testImplementation project(':score-test')
 
     compileOnly project(':annotation_processor')
     annotationProcessor project(':annotation_processor')
