--- a/example/build.gradle
+++ b/example/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 }
 
 optimizedJar {
-    mainClassName = 'com.iconloop.score.example.HelloWorld'
+    mainClassName = 'com.iconloop.score.example.HelloWorldImpl'
     archivesBaseName = 'hello-world'
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
