--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@ group=com.iconloop.score
 annotation_processor.version=0.1.0
 score-lib.version=0.1.0
 score-test.version=0.1.0
+score-client.version=0.1.0
+#dependencies
+javaee.version=0.8.9
+scorex.version=0.5.2
+iconsdk.version=2.0.0
