Reorganize sub-projects
- score-lib => score-data
- move JsonObjectProcessor to score-json/com.iconloop.score.json
- move ScoreDataObjectProcessor, ScorePropertiesDBObjectProcessor to score-data/com.iconloop.score.data
- move ScoreInterfaceProcessor to score-client/com.iconloop.score.client

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ subprojects {
     }
 
     ext {
+        javapoetVersion = getProperty("javapoet.version")
         javaeeVersion = getProperty("javaee.version")
         scorexVersion = getProperty("scorex.version")
         iconsdkVersion = getProperty("iconsdk.version")
@@ -33,9 +34,10 @@ subprojects {
 
 configure([
         project(':annotation_processor'),
-        project(':score-lib'),
-        project(':score-test'),
+        project(':score-json'),
+        project(':score-data'),
         project(':score-client'),
+        project(':score-test'),
 ]) {
     apply plugin: 'maven-publish'
 
