--- a/annotation_processor/build.gradle
+++ b/annotation_processor/build.gradle
@@ -1,9 +1,5 @@
 apply plugin: 'java-library'
 
 dependencies {
-    implementation("com.squareup:javapoet:1.12.1")
-    implementation("foundation.icon:javaee-api:$javaeeVersion")
-    implementation("com.github.sink772:javaee-scorex:$scorexVersion")
-    implementation("com.github.sink772:minimal-json:0.9.6")
-    implementation project(':score-lib')
+    implementation("com.squareup:javapoet:$javapoetVersion")
 }
