--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,11 @@
 group=com.iconloop.score
 annotation_processor.version=0.1.0
-score-lib.version=0.1.0
-score-test.version=0.1.0
+score-json.version=0.1.0
+score-data.version=0.1.0
 score-client.version=0.1.0
+score-test.version=0.1.0
 #dependencies
+javapoet.version=1.12.1
 javaee.version=0.8.9
 scorex.version=0.5.2
 iconsdk.version=2.0.0
