--- a/score-client/build.gradle
+++ b/score-client/build.gradle
@@ -1,11 +1,19 @@
 apply plugin: 'java-library'
 
 dependencies {
-    implementation("com.squareup:javapoet:1.12.1")
+    implementation project(":annotation_processor")
+    implementation("com.squareup:javapoet:$javapoetVersion")
     implementation("foundation.icon:javaee-api:$javaeeVersion")
     implementation("foundation.icon:icon-sdk:$iconsdkVersion")
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.9.6")
+    implementation("com.squareup.okhttp3:okhttp:3.11.0")
+    implementation("org.bouncycastle:bcprov-jdk15on:1.60")
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.6.0")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.0")
+}
+
+test {
+    useJUnitPlatform()
 }
