--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@ annotation_processor.version=0.1.0
 score-json.version=0.1.0
 score-data.version=0.1.0
 score-client.version=0.1.0
-score-test.version=0.1.0
 #dependencies
 javapoet.version=1.12.1
-javaee.version=0.8.9
+javaee.version=0.9.0
 scorex.version=0.5.2
+javaee-unittest.version=0.9.1
 iconsdk.version=2.0.0
+jackson.version=2.9.6
