--- a/score-client/build.gradle
+++ b/score-client/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     implementation("com.squareup:javapoet:$javapoetVersion")
     implementation("foundation.icon:javaee-api:$javaeeVersion")
     implementation("foundation.icon:icon-sdk:$iconsdkVersion")
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.9.6")
+    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
     implementation("com.squareup.okhttp3:okhttp:3.11.0")
     implementation("org.bouncycastle:bcprov-jdk15on:1.60")
 
