--- a/score-data/build.gradle
+++ b/score-data/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     implementation project(":annotation_processor")
     implementation("com.squareup:javapoet:$javapoetVersion")
     implementation("foundation.icon:javaee-api:$javaeeVersion")
-    implementation("com.github.sink772:javaee-scorex:$scorexVersion")
+    implementation("foundation.icon:javaee-scorex:$scorexVersion")
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.6.0")
