Remove ScorePropertiesDBObjectProcessor and java.com.iconloop.score.lib package
- Remove ScorePropertiesDBObjectProcessor, because it's incompleted
- Move example/EnumerableDictDB to score-data
- Update example - using score-json, score-data, score-client

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,9 @@ subprojects {
         javapoetVersion = getProperty("javapoet.version")
         javaeeVersion = getProperty("javaee.version")
         scorexVersion = getProperty("scorex.version")
+        javaeeUnittestVersion = getProperty("javaee-unittest.version")
         iconsdkVersion = getProperty("iconsdk.version")
+        jacksonVersion = getProperty("jackson.version")
     }
 }
 
@@ -37,7 +39,6 @@ configure([
         project(':score-json'),
         project(':score-data'),
         project(':score-client'),
-        project(':score-test'),
 ]) {
     apply plugin: 'maven-publish'
 
