--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-group=com.iconloop.score
+group=foundation.icon
 annotation_processor.version=0.1.0
 score-json.version=0.1.0
 score-data.version=0.1.0
