--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,5 @@ scorex.version=0.5.2
 javaee-unittest.version=0.9.1
 iconsdk.version=2.0.0
 jackson.version=2.9.6
+#test configuration
+integrationTest=false
