--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ subprojects {
         javaeeUnittestVersion = getProperty("javaee-unittest.version")
         iconsdkVersion = getProperty("iconsdk.version")
         jacksonVersion = getProperty("jackson.version")
+        integrationTest = Boolean.parseBoolean(getProperty("integrationTest").toString())
     }
 }
 
