--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,11 @@ score-data.version=0.9.0
 score-client.version=0.9.0
 #dependencies
 javapoet.version=1.12.1
-javaee.version=0.9.0
-scorex.version=0.5.2
+javaee.version=0.9.2
+scorex.version=0.5.3
 javaee-unittest.version=0.9.1
-iconsdk.version=2.0.0
-jackson.version=2.9.6
+iconsdk.version=2.3.0
+jackson.version=2.14.1
+okhttp.version=4.10.0
 #test configuration
 integrationTest=false
