--- a/score-client/build.gradle
+++ b/score-client/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     implementation("foundation.icon:javaee-api:$javaeeVersion")
     implementation("foundation.icon:icon-sdk:$iconsdkVersion")
     implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
-    implementation("com.squareup.okhttp3:okhttp:3.11.0")
+    implementation("com.squareup.okhttp3:okhttp:$okhttpVersion")
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.7.2")
