--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,11 @@ score-data.version=0.9.0
 score-client.version=0.10.3
 #dependencies
 javapoet.version=1.12.1
-javaee.version=0.9.2
-scorex.version=0.5.3
-javaee-unittest.version=0.9.1
-iconsdk.version=2.3.0
+javaee.version=0.9.5
+scorex.version=0.5.4.1
+minimal-json.version=0.9.7
+javaee-unittest.version=0.12.0
+iconsdk.version=2.5.0
 jackson.version=2.14.1
 okhttp.version=4.10.0
 #test configuration
