--- a/score-json/build.gradle
+++ b/score-json/build.gradle
@@ -5,5 +5,5 @@ dependencies {
     implementation("com.squareup:javapoet:$javapoetVersion")
     implementation("foundation.icon:javaee-api:$javaeeVersion")
     implementation("foundation.icon:javaee-scorex:$scorexVersion")
-    implementation("com.github.sink772:minimal-json:0.9.6")
+    implementation("com.github.sink772:minimal-json:$minimalJsonVersion")
 }
